--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic Light</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <div class="container">
         <div class="traffic-light">                
                 <div class="panel">
-                    <div class="light light-off">
+                    <div id="red" class="light light-off">
 
                     </div>
-                    <div class="light light-off">
+                    <div id="yellow" class="light yellow-light">
 
                     </div>
-                    <div class="light light-off">
+                    <div id="green" class="light light-off">
 
                     </div>
                 </div>
             </div>
-            <button>Click Me</button>
+            <button onclick="changeTrafficLight()">Click Me</button>
     </div>
 
-    
+    <script src="javascript.js"></script>
 </body>
 </html>
